# app/Http/Requests/Bookings/GetBookingsRequest.php
@@ -11,10 +11,13 @@ class GetBookingsRequest extends BookingsRequest
     public function rules(): array
     {
         return [
+            'className' => 'string',
+            'personName' => 'string',
             'page' => 'integer|min:1',
-            'startDate' => 'date',
+            'startDate' => 'date|date_format:Y-m-d',
             'endDate' =>  [
                 'date',
+                'date_format:Y-m-d',
                 $this->input('startDate') !== null ? 'after_or_equal:startDate' : ''
             ],
         ];
