# app/Http/Requests/Classes/ClassRequest.php
@@ -28,9 +28,12 @@ class ClassRequest extends FormRequest
             'name.max' => 'The name may not be greater than 255 characters.',
             'startDate.required' => 'The start date field is required.',
             'startDate.date' => 'The start date must be a valid date.',
+            'startDate.after_or_equal' => 'The start date must be after or equal to today.',
+            'startDate.date_format' => 'The start date field must follow yyyy-mm-dd format.',
             'endDate.required' => 'The end date field is required.',
             'endDate.date' => 'The end date must be a valid date.',
             'endDate.after_or_equal' => 'The end date must be after or equal to the start date.',
+            'endDate.date_format' => 'The end date field must follow yyyy-mm-dd format.',
             'capacity.required' => 'The capacity field is required.',
             'capacity.integer' => 'The capacity field must be an integer.',
             'capacity.min' => 'The capacity field must be greater than or equal to 1.',
