# app/Http/Requests/Classes/StoreClassRequest.php
@@ -6,15 +6,24 @@ namespace App\Http\Requests\Classes;
 
 class StoreClassRequest extends ClassRequest
 {
+
     public function rules(): array
     {
+        $today = now()->format('Y-m-d');
+
         return [
             'name' => 'required|string|max:255',
-            'startDate' => 'required|date',
+            'startDate' => [
+                'required',
+                'date',
+                'date_format:Y-m-d',
+                'after_or_equal:'.$today
+            ],
             'endDate' => [
                 'required',
                 'date',
-                'after_or_equal:startDate'
+                'after_or_equal:startDate',
+                'date_format:Y-m-d'
             ],
             'capacity' => 'required|integer|min:1',
         ];
